Add replay and change name buttons and draw function

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
     <div id="display"></div>
 
+    <button id="replay">Replay</button>
+    <button id="change">Change player names</button>
+    
     <footer>Copyright ©
         <script>
           document.write(new Date().getFullYear())
