Add win sound effect and score keeping text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </form> 
     </div>
 
-    <div id="display"></div>
+    <div id="display" class="gameText"></div>
+    <div id="score" class="gameText"></div>
 
     <button id="replay">Replay</button>
     <button id="change">Change player names</button>
